--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^19.2.3",
     "react": "^19.2.3",
     "lucide-react": "0.344.0",
-    "xlsx": "0.18.5"
+    "xlsx": "0.18.5",
+    "socket.io-client": "4.7.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
