--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
-  "name": "generated",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "inventory-backend",
+  "version": "1.0.0",
+  "description": "Realtime backend for AutoSys",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "react": "^19.2.3",
-    "lucide-react": "0.344.0",
-    "xlsx": "0.18.5",
-    "socket.io-client": "4.7.4"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "socket.io": "^4.7.4"
   }
 }
